--- a/infra/dev/k8s/rabbitmq-deployment.yaml
+++ b/infra/dev/k8s/rabbitmq-deployment.yaml
@@ -21,17 +21,27 @@ spec:
             - containerPort: 15672 # Management UI port
           readinessProbe:
             exec:
-              command: ["rabbitmq-diagnostics", "check_running"]
-            initialDelaySeconds: 20
+              command:
+                - rabbitmq-diagnostics
+                - -q
+                - --timeout
+                - "30"
+                - check_running
+            initialDelaySeconds: 30
             periodSeconds: 10
-            timeoutSeconds: 15
-            failureThreshold: 3
+            timeoutSeconds: 30
+            failureThreshold: 6
           livenessProbe:
             exec:
-              command: ["rabbitmq-diagnostics", "check_running"]
-            initialDelaySeconds: 60
+              command:
+                - rabbitmq-diagnostics
+                - -q
+                - --timeout
+                - "60"
+                - check_running
+            initialDelaySeconds: 90
             periodSeconds: 30
-            timeoutSeconds: 15
+            timeoutSeconds: 60
           resources:
             requests:
               memory: "512Mi"
@@ -55,6 +65,14 @@ spec:
           volumeMounts:
             - name: rabbitmq-data
               mountPath: /var/lib/rabbitmq
+            - name: rabbitmq-config
+              mountPath: /etc/rabbitmq/rabbitmq.conf
+              subPath: rabbitmq.conf
+              readOnly: true
+      volumes:
+        - name: rabbitmq-config
+          configMap:
+            name: rabbitmq-config
   volumeClaimTemplates:
   - metadata:
       name: rabbitmq-data
