--- a/infra/dev/k8s/user-service.yaml
+++ b/infra/dev/k8s/user-service.yaml
@@ -18,6 +18,13 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 50052
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "256Mi"
           env:
             - name: USER_GRPC_ADDR
               value: ":50052"
@@ -25,6 +32,25 @@ spec:
               value: "development"
             - name: JAEGER_ENDPOINT
               value: "http://jaeger:14268/api/traces"
+            - name: USER_DB_HOST
+              value: user-db
+            - name: USER_DB_PORT
+              value: "5432"
+            - name: USER_DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: user-db-secret
+                  key: POSTGRES_USER
+            - name: USER_DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: user-db-secret
+                  key: POSTGRES_PASSWORD
+            - name: USER_DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: user-db-secret
+                  key: POSTGRES_DB
           readinessProbe:
             tcpSocket:
               port: 50052
