--- a/infra/dev/k8s/user-service.yaml
+++ b/infra/dev/k8s/user-service.yaml
@@ -11,6 +11,10 @@ spec:
     metadata:
       labels:
         app: user-service
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "9090"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
         - name: user-service
@@ -18,6 +22,9 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 50052
+              name: grpc
+            - containerPort: 9090
+              name: metrics
           resources:
             requests:
               cpu: "100m"
