--- a/infra/dev/k8s/api-gateway-deployment.yaml
+++ b/infra/dev/k8s/api-gateway-deployment.yaml
@@ -48,6 +48,20 @@ spec:
                 secretKeyRef:
                   name: rabbitmq-credentials
                   key: uri
+            - name: ENVIRONMENT
+              valueFrom:
+                configMapKeyRef:
+                  key: ENVIRONMENT
+                  name: app-config
+            # Backend service addresses
+            - name: AUTH_SERVICE_ADDR
+              value: "auth-service:50051"
+            - name: USER_SERVICE_ADDR
+              value: "user-service:50052"
+            - name: ORG_SERVICE_ADDR
+              value: "organization-service:50053"
+            - name: TASK_SERVICE_ADDR
+              value: "task-service:50054"
 ---
 apiVersion: v1
 kind: Service
