--- a/infra/dev/k8s/secrets_example.yaml
+++ b/infra/dev/k8s/secrets_example.yaml
@@ -17,7 +17,7 @@ type: Opaque
 stringData:
   POSTGRES_DB: auth_service
   POSTGRES_USER: auth_service
-  POSTGRES_PASSWORD: change_me_in_production
+  POSTGRES_PASSWORD: auth_service
 
 ---
 apiVersion: v1
@@ -28,7 +28,7 @@ type: Opaque
 stringData:
   POSTGRES_DB: user_service
   POSTGRES_USER: user_service
-  POSTGRES_PASSWORD: change_me_in_production
+  POSTGRES_PASSWORD: user_service
 
 ---
 apiVersion: v1
@@ -39,7 +39,7 @@ type: Opaque
 stringData:
   POSTGRES_DB: task_service
   POSTGRES_USER: task_service
-  POSTGRES_PASSWORD: change_me_in_production
+  POSTGRES_PASSWORD: task_service
 
 ---
 apiVersion: v1
@@ -50,7 +50,7 @@ type: Opaque
 stringData:
   POSTGRES_DB: organization_service
   POSTGRES_USER: organization_service
-  POSTGRES_PASSWORD: change_me_in_production
+  POSTGRES_PASSWORD: organization_service
 
 ---
 apiVersion: v1
@@ -59,4 +59,17 @@ metadata:
   name: grafana
 type: Opaque
 stringData:
-  admin-password: "change_me_in_production"
+  admin-password: "admin123"
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: web-client-env
+type: Opaque
+stringData:
+  NEXT_PUBLIC_API_URL: "http://localhost:8081"
+  NODE_ENV: "development"
+  NEXT_TELEMETRY_DISABLED: "1"
+  WATCHPACK_POLLING: "true"
+  CHOKIDAR_USEPOLLING: "true"
