--- a/web/client/package.json
+++ b/web/client/package.json
@@ -27,6 +27,7 @@
     "rsuite": "^5.83.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.6",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
