--- a/web/client/package.json
+++ b/web/client/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
@@ -30,12 +33,14 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "react-remove-scroll": "^2.7.1",
     "rsuite": "^5.83.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tippy": "^0.0.0",
     "tippy.js": "^6.3.7",
     "use-debounce": "^10.0.6",
+    "use-sidecar": "^1.1.3",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
