--- a/infra/dev/k8s/secrets_example.yaml
+++ b/infra/dev/k8s/secrets_example.yaml
@@ -73,3 +73,16 @@ stringData:
   NEXT_TELEMETRY_DISABLED: "1"
   WATCHPACK_POLLING: "true"
   CHOKIDAR_USEPOLLING: "true"
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: search-service-env
+type: Opaque
+stringData:
+  ELASTICSEARCH_URL: "http://elasticsearch:9200"
+  SEARCH_INDEX_NAME: "taskflow_search"
+  SEARCH_INTERNAL_TOKEN: "replace-me"
+  TASK_SERVICE_ADDR: "task-service:50054"
+  USER_SERVICE_ADDR: "user-service:50052"
