--- a/infra/dev/k8s/search-service.yaml
+++ b/infra/dev/k8s/search-service.yaml
@@ -23,11 +23,15 @@ spec:
           ports:
             - containerPort: 8080
               name: http
+            - containerPort: 9091
+              name: grpc
             - containerPort: 9090
               name: metrics
           env:
             - name: HTTP_ADDR
               value: ":8080"
+            - name: SEARCH_GRPC_ADDR
+              value: ":9091"
             - name: ENVIRONMENT
               valueFrom:
                 configMapKeyRef:
@@ -94,3 +98,6 @@ spec:
     - name: http
       port: 8080
       targetPort: 8080
+    - name: grpc
+      port: 9091
+      targetPort: 9091
