--- a/infra/dev/k8s/search-service.yaml
+++ b/infra/dev/k8s/search-service.yaml
@@ -32,6 +32,8 @@ spec:
               value: ":8080"
             - name: SEARCH_GRPC_ADDR
               value: ":9091"
+            - name: SEARCH_AUTO_REINDEX
+              value: "true"
             - name: ENVIRONMENT
               valueFrom:
                 configMapKeyRef:
